--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "material-icons": "^0.3.1",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
+    "querystring": "^0.2.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue": "^2.6.10",
