--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "eslintConfig": {
     "root": true,
+    
     "env": {
       "node": true
     },
@@ -48,9 +49,12 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
+
     }
   },
   "postcss": {
